	  (cb_intrinsic_table): replaced "const int implemented" by
	  "enum cb_feature_mode active"
	* reserved.c, tree.c: adjusted cb_intrinsic_table to use cb_feature_mode

2017-07-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c, typeck.c, tree.h: added parsing for ACU
	  extensions DISPLAY WINDOW, CLOSE WINDOW and DESTROY statements

2017-07-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* error.c: don't output "[re]defined here" messages when there
	  is no actual location to reference
	* parser.y, reserved.c: added ACU extension USAGE HANDLE (both generic
	  and typed variants), added parser part for ACU THREADs (started via
	  CALL/PERFORM) and THREAD statements (SET THREAD PRIORITY and STOP THREAD)
	  [nothing done in libcob yet]
	* codegen.c, field.c: changes for USAGE HANDLE

2017-07-03  Ron Norman <rjn@inglenet.com>

	* typeck.c: Move check for cb_warn_parentheses to cb_build_expr routine
	  so that the check is done before constant expressions get folded

2017-07-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (cb_build_binary_op): raise "invalid expression" for
	  invalid elements instead of COBC_ABORT
	* config.def, cobc.c (cb_build_binary_op): added cb_constant_folding
	  "constant-folding" configuration option to provide a way to disable
	  this optimization (which is active in nearly all conf-files)
	* config.def: reordered for nicer help output
	* warning.def, typeck.c (validate_move): renamed cb_warn_truncate
	  "-Wtruncate" to cb_warn_pos_truncate "-Wpossible-truncate" and
	  cb_warn_constant "-Wconstant" to cb_warn_truncate "-Wtruncate"
	* config.def, scanner.l: renamed cb_acucobol_literals
	  "acucobol-literals" option to cb_acu_literals "acu-literals"
	* parser.y: set context CB_CS_ALLOCATE and CB_CS_READ

2017-07-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_usage): added -std=rm and all strict variants
